--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,35 @@
-theme: jekyll-theme-cayman
-title: "KHOTANESE"
+title: KHOTANESE.ORG
+description: > # this means to ignore newlines until "baseurl:"
+  khotanese.org
+permalink: ':title/'
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://khotanese.org/" # the base hostname & protocol for your site, e.g. http://example.com
+site-twitter: #if your site has a twitter account, enter it here
+
+# Author Settings
+author: KHOTANESE.ORG # add your name
+author-img: # add your photo
+about-author:  The Kingdom of Khotan was an ancient Iranian Saka Buddhist kingdom located on the branch of the Silk Road that ran along the southern edge of the Taklamakan Desert in the Tarim Basin (modern Xinjiang, China). The ancient capital was originally sited to the west of modern-day Hotan (Chinese- 和田) at Yotkan (Chinese- 约特干; pinyin- Yuētègàn).[1][2] From the Han dynasty until at least the Tang dynasty it was known in Chinese as Yutian (Chinese- 于闐, 于窴, or 於闐). This largely Buddhist kingdom existed for over a thousand years until it was conquered by the Muslim Kara-Khanid Khanate in 1006, during the Islamicisation and Turkicisation of Xinjiang. # add description
+social-twitter: # add your Twitter handle
+social-facebook: # add your Facebook handle
+social-github: artemsheludko # add your Github handle
+social-linkedin: # add your Linkedin handle
+social-email: # add your Email address
+
+# Disqus
+discus-identifier:  # add your discus identifier
+
+# Tracker
+analytics: # Google Analytics
+
+# Build Settings
+markdown: kramdown
+plugins:
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jemoji
+
+paginate: 8
+paginate_path: "/page/:num"
+
+exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
