--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: KHOTANESE.ORG # add your name
 author-img: # add your photo
-about-author:  The Kingdom of Khotan was an ancient Iranian Saka Buddhist kingdom located on the branch of the Silk Road that ran along the southern edge of the Taklamakan Desert in the Tarim Basin (modern Xinjiang, China). The ancient capital was originally sited to the west of modern-day Hotan (Chinese- 和田) at Yotkan (Chinese- 约特干; pinyin- Yuētègàn). From the Han dynasty until at least the Tang dynasty it was known in Chinese as Yutian (Chinese- 于闐, 于窴, or 於闐). This largely Buddhist kingdom existed for over a thousand years until it was conquered by the Muslim Kara-Khanid Khanate in 1006, during the Islamicisation and Turkicisation of Xinjiang. # add description
+about-author:  于闐語# add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: artemsheludko # add your Github handle
