--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://khotanese.org/" # the base hostname & protocol for your site, e.g.
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: KHOTANESE.ORG # add your name
+author: Khotanese Project # add your name
 author-img: # add your photo
 about-author:  于闐語 # add description
 social-twitter: # add your Twitter handle
